--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,5 +1,5 @@
 - name: ping the server 
-  hosts: Node which are connecting to server
+  hosts: Node #which are connecting to the server
   tasks:
   - name: ping 
     ansible.builtin.ping: #ansible ping module
