--- a/inventory.ini
+++ b/inventory.ini
@@ -3,3 +3,12 @@
 
 [Node]
 172.31.24.140
+
+[local]
+localhost
+
+[local:vars]
+NAME=from inventory
+; COURSE=Ansible
+; DURATION=10HRS
+; TRAINER=Yuvaraj
