--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -1,5 +1,5 @@
 - name: PLAY-01
-  host: local
+  hosts: local
   tasks:
   - name: PLAY-01 and TASK-01
     ansible.builtin.debug:
@@ -10,8 +10,7 @@
       msg: "Hello from PLAY-01 and TASK-02"
 
 - name: PLAY-02
-  host: local
-  connection: local
+  hosts: local
   tasks:
   - name: PLAY-02 and TASK-01
     ansible.builtin.debug:
