--- a/07-vars.prompt.yaml
+++ b/07-vars.prompt.yaml
@@ -11,4 +11,5 @@
   tasks:
   - name: print credentials
     ansible.builtin.debug:
+    private: true
       msg: "Hello, Username is: {{ username }}, Password is: {{ password }}"
