--- a/07-vars.prompt.yaml
+++ b/07-vars.prompt.yaml
@@ -11,5 +11,5 @@
   tasks:
   - name: print credentials
     ansible.builtin.debug:
-      msg: "Hello, Username is: {{ username }}, Password is: {{ *********}}
+      msg: "Hello, Username is: {{ username }}, Password is: {{ password }}"
        
