--- a/inventory.ini
+++ b/inventory.ini
@@ -9,6 +9,6 @@ localhost
 
 [local:vars]
 NAME=from inventory
-; COURSE=Ansible
-; DURATION=10HRS
-; TRAINER=Yuvaraj
+COURSE=Ansible
+DURATION=10HRS
+TRAINER=Yuvaraj
